--- a/gomoku/js/public/index.html
+++ b/gomoku/js/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Intro</title>
+        <title>Home</title>
         <script src="/main.js" type="module"></script>
     </head>
     <body>
-        <h1>Gomoku</h1>
+        <h1>GOMOKU</h1>
         <div id="root"></div>
     </body>
 </html>
