Project improved. TODO list in GomokuApplication.kt file

--- a/code/js/public/index.html
+++ b/code/js/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="shortcut icon" href="/public/assets/favicon.png">
         <title>Home</title>
         <script src="/main.js" type="module"></script>
     </head>
